# workout-discord-bot

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  README_TESTING.md  config.py  database.py  database_upsert_alternative.py  docker-compose.yml  main.py  migration_fix_unique_constraint.sql  pyproject.toml  pytest.ini  requirements.txt  supabase_schema.sql  test_bot.py  utils.py
.github/workflows/: deploy.yml
bot/: __init__.py  client.py  events.py
commands/: __init__.py  admin_commands.py  info_commands.py  workout_commands.py
docs/: discord-setup.md  github-secrets-setup.md  supabase-setup.md
models/: __init__.py  user.py  workout.py
scripts/: collect-secrets.sh  deploy-gcp.sh  setup-vm.sh
services/: __init__.py  penalty_service.py  report_service.py  workout_service.py
tests/: conftest.py  test_edge_cases.py  test_integration.py  test_models.py  test_services.py  test_utils.py
utils/: __init__.py  date_utils.py  formatting.py  validation.py
